--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -87,6 +87,33 @@ input {
   transition: 0.4s;
 }
 
+div.header{
+  display: flex;
+  justify-content: space-between;
+  max-width: 700px;
+  margin-left: 0;
+}
+
+p.pagenation {
+  display: flex;
+  justify-content: center;
+  margin-left: 0;
+  max-width: 700px;
+}
+
+a.button.number {
+  margin: auto;
+
+}
+
+input[type=text].search {
+  width: 200px;
+}
+
+input[type=submit].search {
+margin-left: 5px;
+}
+
 input[type=text] {
   margin-left: 7px;
   width: 300px;
