--- a/views/new-book.pug
+++ b/views/new-book.pug
@@ -2,7 +2,7 @@ extends layout
 block content
     h1 New Book
     include error
-        form(action="/", method="post")
+        form(action="/books/new", method="post")
             include form
             p
                 input(type="submit" value="Create New Book")
